--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
             margin: 10px auto;
             border-radius: 8px;
         }
+        .spacer {
+            height: 30px; /* Consistent spacing before sections */
+            display: block;
+        }
         .button-container {
             text-align: center; /* Center button */
             margin-top: 20px;
@@ -86,4 +90,56 @@
                             <h1>Join Us at World Health Assembly (WHA78)</h1>
                             <h2>Health Without Borders – Integrated Primary Healthcare for All</h2>
                             <img src="https://i.imgur.com/DlaXBcb.jpeg" alt="Integrated Health Event">
-                            <
+                            <p>This session will emphasize the importance of integrated primary healthcare (IPHC) in tackling key global health challenges such as HIV, TB, diabetes, and hypertension. The discussion will highlight policy integration, improved diagnosis and care frameworks, and cross-sector collaboration to strengthen universal health coverage (UHC).</p>
+                            <span class="spacer"></span>
+                            <p><strong>Objectives:</strong></p>
+                            <ul>
+                                <li>Promote policy and advocacy for cost-effective and sustainable IPHC solutions.</li>
+                                <li>Strengthen health equity and inclusion, ensuring access for marginalized populations.</li>
+                                <li>Foster multisectoral collaboration among governments, international agencies, donors, and civil society.</li>
+                                <li>IDA is bringing together key stakeholders to establish a lasting impact by convening key stakeholders in the Primary Healthcare Coalition—an ongoing platform for dialogue, policy coordination, and advocacy.</li>
+                            </ul>
+                            <span class="spacer"></span>
+                            <p><strong>Details:</strong></p>
+                            <ul class="no-bullet">
+                                <li>📅 <strong>Date:</strong> May 19, 2025</li>
+                                <li>🕙 <strong>Time:</strong> 15:30 – 17:00 CEST</li>
+                                <li>📍 <strong>Location:</strong> Civil Society Networking Space, Salle Nyon, 9–11 Rue de Varembé, 1211 Geneva 20</li>
+                            </ul>
+                            <div class="button-container">
+                                <a href="https://www.id-alliance.org/event-details/wha78-side-event-health-without-borders-integrated-primary-healthcare-for-all" class="button">Register Here</a>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+
+    <script>
+        window.addEventListener('DOMContentLoaded', function () {
+            setTimeout(function () {
+                if (confirm("Would you like to copy the entire page content (with formatting and images) to your clipboard?\nYou can then paste it directly into your email.")) {
+                    const elementToCopy = document.body; 
+                    const htmlContent = elementToCopy.innerHTML;
+
+                    try {
+                        const blob = new Blob([htmlContent], { type: 'text/html' });
+                        const clipboardItem = new ClipboardItem({ 'text/html': blob });
+
+                        navigator.clipboard.write([clipboardItem]).then(function() {
+                            alert("Entire page content copied with formatting! You can now paste it into your email.");
+                        }).catch(function(err) {
+                            console.error('Failed to copy HTML to clipboard: ', err);
+                            alert("Sorry, couldn't automatically copy the page content with formatting. You might need to manually select everything (Ctrl+A or Cmd+A) and copy (Ctrl+C or Cmd+C).");
+                        });
+                    } catch (error) {
+                        console.error('Error preparing content for clipboard: ', error);
+                        alert("Sorry, your browser might not support copying rich content this way. Please manually select everything (Ctrl+A or Cmd+A) and copy (Ctrl+C or Cmd+C).");
+                    }
+                }
+            }, 1000);
+        });
+    </script>
+</body>
+</html>
