--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join Us at World Health Assembly (WHA78)</title>
+    <title>WHA78 side event - IPHC</title>
     <style>
         body {
             margin: 0;
