--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <h2>Health Without Borders – Integrated Primary Healthcare for All</h2>
                             <p>(Organized by IDA, Sightsavers, ASTMH, GHC, PATH, IDDC, YHO and Amref Health Africa)</p>
                             <img src="https://i.imgur.com/DlaXBcb.jpeg" alt="Integrated Health Event">
-                            <p>This session will emphasize the importance of integrated primary healthcare (IPHC) in tackling key global health challenges such as HIV, TB, diabetes, and hypertension. The discussion will highlight policy integration, improved diagnosis and care frameworks, and cross-sector collaboration to strengthen universal health coverage (UHC).</p>
+                            <p>This session will emphasize the importance of integrated primary healthcare (IPHC) in tackling key global health challenges such as HIV, TB, diabetes, and hypertension. The discussion will highlight policy integration, improved diagnosis and care frameworks, cross-sector collaboration, and equitable access for marginalised populations, to strengthen universal health coverage (UHC).</p>
                             <span class="spacer"></span>
                             <p><strong>Objectives:</strong></p>
                             <ul>
