--- a/index.html
+++ b/index.html
@@ -1,122 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WHA78 side event - IPHC</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #1c0bb1; /* Blue background */
-        }
-        table {
-            border-spacing: 0;
-            border-collapse: collapse;
-            margin: 0 auto;
-        }
-        .content {
-            max-width: 640px;
-            margin: 0 auto;
-            background-color: #f5f3ef; /* White-ish box background */
-            border-radius: 8px;
-            padding: 20px;
-        }
-        h1, h2, p, ul {
-            margin: 0;
-            padding: 10px;
-            font-family: Merriweather, Georgia, serif;
-            text-align: center; /* Center text */
-        }
-        h1 {
-            font-size: 28px;
-            color: #000000;
-        }
-        h2 {
-            font-size: 22px;
-            font-weight: bold;
-            color: #000000;
-        }
-        p {
-            font-size: 16px;
-            color: #555555;
-            padding: 0 40px; /* Padding to align with image */
-            margin-bottom: 20px; /* Increased spacing between paragraphs */
-        }
-        ul {
-            font-size: 16px;
-            color: #555555;
-            padding: 0 40px; /* Padding to align with image */
-            text-align: left; /* Left-align lists */
-        }
-        ul.no-bullet {
-            list-style-type: none; /* Remove bullet points */
-        }
-        img {
-            width: 85%;
-            display: block;
-            margin: 10px auto;
-            border-radius: 8px;
-        }
-        .spacer {
-            height: 30px; /* Consistent spacing before sections */
-            display: block;
-        }
-        .button-container {
-            text-align: center; /* Center button */
-            margin-top: 20px;
-        }
-        .button {
-            display: inline-block;
-            background-color: #1c0bb1;
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 8px;
-            font-size: 16px; /* Reduced button text size */
-        }
-        .button:hover {
-            background-color: #144098;
-        }
-    </style>
-</head>
-<body>
-    <table width="100%" style="background-color: #1c0bb1;">
-        <tr>
-            <td align="center">
-                <table class="content">
-                    <tr>
-                        <td>
-                            <h1>Join Us at World Health Assembly (WHA78)</h1>
-                            <h2>Health Without Borders – Integrated Primary Healthcare for All</h2>
-                            <p>(Organized by IDA, Sightsavers, ASTMH, GHC, PATH, IDDC, YHO and Amref Health Africa)</p>
-                            <img src="https://i.imgur.com/DlaXBcb.jpeg" alt="Integrated Health Event">
-                            <p>This session will emphasize the importance of integrated primary healthcare (IPHC) in tackling key global health challenges such as HIV, TB, diabetes, and hypertension. The discussion will highlight policy integration, improved diagnosis and care frameworks, cross-sector collaboration, and equitable access for marginalised populations, to strengthen universal health coverage (UHC).</p>
-                            <span class="spacer"></span>
-                            <p><strong>Objectives:</strong></p>
-                            <ul>
-                                <li>Promote policy and advocacy for cost-effective and sustainable IPHC solutions.</li>
-                                <li>Strengthen health equity and inclusion, ensuring access for marginalized populations.</li>
-                                <li>Foster multisectoral collaboration among governments, international agencies, donors, and civil society.</li>
-                                <li>IDA is bringing together key stakeholders to establish a lasting impact by convening key stakeholders in the Primary Healthcare Coalition—an ongoing platform for dialogue, policy coordination, and advocacy.</li>
-                            </ul>
-                            <span class="spacer"></span>
-                            <p><strong>Details:</strong></p>
-                            <ul class="no-bullet">
-                                <li>📅 <strong>Date:</strong> May 19, 2025</li>
-                                <li>🕙 <strong>Time:</strong> 15:30 – 17:00 CEST</li>
-                                <li>📍 <strong>Location:</strong> Civil Society Networking Space, Salle Nyon, 9–11 Rue de Varembé, 1211 Geneva 20</li>
-                            </ul>
-                            <div class="button-container">
-                                <a href="https://www.id-alliance.org/event-details/wha78-side-event-health-without-borders-integrated-primary-healthcare-for-all" class="button">Register Here</a>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-
+Vaccine Hesitancy
     <script>
   window.addEventListener('DOMContentLoaded', function () {
     setTimeout(function () {
