--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top; border-radius: 0px;">
 													<div class="spacer_block block-1" style="height:30px;line-height:30px;font-size:1px;">&#8202;</div>
-													<table class="paragraph_block block-2" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+													<table class="paragraph_block block-2" width="100%" border="0" cellpadding="20" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 														<tr>
 															<td class="pad">
-																<div style="color:#474d3b;direction:ltr;font-family:Poppins, Arial, Helvetica, sans-serif;font-size:20px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:24px;">
+																<div style="color:#474d3b;direction:ltr;font-family:Poppins, Arial, Helvetica, sans-serif;font-size:20px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:left;mso-line-height-alt:24px;">
 																	<p style="margin: 0; margin-bottom: 16px;">Vaccine hesitancy remains one of Europe’s most pressing public health challenges. From institutional mistrust to digital misinformation, the roots are complex — but solutions are within reach.</p>
 																	<p style="margin: 0; margin-bottom: 16px;">To address this, the <strong>Infectious Disease Alliance (IDA)</strong>, in collaboration with <strong>PATH</strong>, invites you to a high-level roundtable at the <strong>European Parliament</strong>. This timely event will explore how cross-sector collaboration, evidence-based policies, and community engagement can restore public confidence in vaccines.</p>
 																	<p style="margin: 0; margin-bottom: 16px;">Held under the patronage of <strong>MEP Nicolás González Casares (S&D)</strong> and <strong>MEP Tomislav Sokol (EPP)</strong>, the session will bring together policymakers, public health experts, researchers, and civil society leaders from across the EU.</p>
