--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" lang="en">
 
 <head>
@@ -123,6 +122,10 @@
 				font-size: 15px !important;
 			}
 
+			.row-4 .column-1 .block-1.paragraph_block td.pad {
+				padding: 10px 35px !important;
+			}
+
 			.row-2 .column-1 .block-5.button_block span,
 			.row-4 .column-1 .block-2.button_block span,
 			.row-6 .column-1 .block-2.button_block span {
@@ -133,10 +136,6 @@
 			.row-2 .column-1 .block-5.button_block .alignment,
 			.row-4 .column-1 .block-2.button_block .alignment {
 				text-align: center !important;
-			}
-
-			.row-4 .column-1 .block-1.paragraph_block td.pad {
-				padding: 10px 35px !important;
 			}
 		}
 	</style><!--[if mso ]><style>sup, sub { font-size: 100% !important; } sup { mso-text-raise:10% } sub { mso-text-raise:-10% }</style> <![endif]-->
@@ -187,7 +186,7 @@
 						<tbody>
 							<tr>
 								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f1f1f1; background-size: auto; color: #000000; width: 630px; margin: 0 auto;" width="630">
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-size: auto; background-color: #f1f1f1; color: #000000; width: 630px; margin: 0 auto;" width="630">
 										<tbody>
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
@@ -245,19 +244,19 @@
 							</tr>
 						</tbody>
 					</table>
-					<table class="row row-3" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+					<table class="row row-3" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #1c0bb1;">
 						<tbody>
 							<tr>
 								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; border-radius: 0; width: 630px; margin: 0 auto;" width="630">
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f1f1f1; color: #000000; border-radius: 0; width: 630px; margin: 0 auto;" width="630">
 										<tbody>
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top;">
-													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+													<table class="image_block block-1" width="100%" border="0" cellpadding="15" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
-															<td class="pad" style="width:100%;">
+															<td class="pad">
 																<div class="alignment" align="center">
-																	<div style="max-width: 630px;"><img src="https://static.wixstatic.com/media/d71f71_35dedc0573c34c18a9dffc113d4fd21e~mv2.jpg/v1/fill/w_1175,h_662,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/d71f71_35dedc0573c34c18a9dffc113d4fd21e~mv2.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="630" alt="event poster" title="event poster" height="auto"></div>
+																	<div style="max-width: 600px;"><img src="https://static.wixstatic.com/media/d71f71_35dedc0573c34c18a9dffc113d4fd21e~mv2.jpg/v1/fill/w_1175,h_662,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/d71f71_35dedc0573c34c18a9dffc113d4fd21e~mv2.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="600" alt="event poster" title="event poster" height="auto"></div>
 																</div>
 															</td>
 														</tr>
@@ -461,7 +460,10 @@
 															<td class="pad" style="vertical-align: middle; color: #1e0e4b; font-family: 'Inter', sans-serif; font-size: 15px; padding-bottom: 5px; padding-top: 5px; text-align: center;"><!--[if vml]><table align="center" cellpadding="0" cellspacing="0" role="presentation" style="display:inline-block;padding-left:0px;padding-right:0px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;"><![endif]-->
 																<!--[if !vml]><!-->
 																<table class="icons-inner" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; display: inline-block; padding-left: 0px; padding-right: 0px;" cellpadding="0" cellspacing="0" role="presentation"><!--<![endif]-->
-																	
+																	<tr>
+																		<td style="vertical-align: middle; text-align: center; padding-top: 5px; padding-bottom: 5px; padding-left: 5px; padding-right: 6px;"><a href="http://designedwithbeefree.com/" target="_blank" style="text-decoration: none;"><img class="icon" alt="Beefree Logo" src="https://d1oco4z2z1fhwp.cloudfront.net/assets/Beefree-logo.png" height="auto" width="34" align="center" style="display: block; height: auto; margin: 0 auto; border: 0;"></a></td>
+																		<td style="font-family: 'Inter', sans-serif; font-size: 15px; font-weight: undefined; color: #1e0e4b; vertical-align: middle; letter-spacing: undefined; text-align: center; line-height: normal;"><a href="http://designedwithbeefree.com/" target="_blank" style="color: #1e0e4b; text-decoration: none;">Designed with Beefree</a></td>
+																	</tr>
 																</table>
 															</td>
 														</tr>
@@ -478,6 +480,8 @@
 			</tr>
 		</tbody>
 	</table><!-- End -->
+
+
 
 
 
