--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 															<td class="pad" style="padding-bottom:15px;padding-left:20px;padding-right:5px;padding-top:15px;">
 																<div style="color:#000000;direction:ltr;font-family:Poppins, Arial, Helvetica, sans-serif;font-size:24px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:29px;">
 																	<p style="margin: 0; margin-bottom: 2px;">The Infectious Disease Alliance (IDA), in collaboration with PATH, is pleased to invite you to a high-level event at the</p>
-																	<p style="margin: 0;"><strong><span style="word-break: break-word; color: #f50808;">European Parliament in Brussels.</span></strong></p>
+																	<p style="margin: 0;"><strong><span style="word-break: break-word; ">European Parliament in Brussels.</span></strong></p>
 																</div>
 															</td>
 														</tr>
@@ -244,32 +244,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<table class="row row-3" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #1c0bb1;">
-						<tbody>
-							<tr>
-								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f1f1f1; color: #000000; border-radius: 0; width: 630px; margin: 0 auto;" width="630">
-										<tbody>
-											<tr>
-												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top;">
-													<table class="image_block block-1" width="100%" border="0" cellpadding="15" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-														<tr>
-															<td class="pad">
-																<div class="alignment" align="center">
-																	<div style="max-width: 600px;"><img src="https://static.wixstatic.com/media/d71f71_35dedc0573c34c18a9dffc113d4fd21e~mv2.jpg/v1/fill/w_1175,h_662,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/d71f71_35dedc0573c34c18a9dffc113d4fd21e~mv2.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="600" alt="event poster" title="event poster" height="auto"></div>
-																</div>
-															</td>
-														</tr>
-													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<table class="row row-4" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #1c0bb1;">
+										<table class="row row-4" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #1c0bb1;">
 						<tbody>
 							<tr>
 								<td>
