--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 														<tr>
 															<td class="pad" style="width:100%;">
 																<div class="alignment" align="center">
-																	<div style="max-width: 630px;"><img src="https://i.imgur.com/Q6hHRuW.jpeg" style="display: block; height: auto; border: 0; width: 100%;" width="630" alt title height="auto"></div>
+																	<div style="max-width: 630px;"><img src="https://i.imgur.com/0K0hFdg.png" style="display: block; height: auto; border: 0; width: 100%;" width="630" alt title height="auto"></div>
 																</div>
 															</td>
 														</tr>
